# amethyst3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/amethyst/: Amethyst.hpp
engine/include/amethyst/ECS/: Context.hpp  Entity.hpp  Query.hpp  Schedule.hpp  System.hpp  World.hpp
engine/include/amethyst/Math/: Vec3.hpp
engine/include/amethyst/Mesh/: Mesh.hpp
engine/include/amethyst/Transform/: Quaternion.hpp  Transform.hpp
engine/include/amethyst/Window/: Window.hpp
engine/lib/ECS/: Schedule.cpp  System.cpp
engine/lib/ECS/Schedule/: DependencyGraph.cpp  Schedule.cpp
engine/lib/Math/: Vec3.cpp
engine/lib/Transform/: Quaternion.cpp  Transform.cpp
engine/lib/Window/: Window.cpp
engine/test/: Main.cpp
engine/test/ECS/Schedule/: DependencyGraph.cpp
engine/test/Math/: Vec3.cpp
engine/test/Transform/: Quaternion.cpp  Transform.cpp
examples/cube/: CMakeLists.txt  main.cpp
